kubernetes/services/it-tools/it-tools-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: default
spec:
  selector:
    app: it-tools
  ports:
  - port: 80
    targetPort: 80
