kubernetes/services/it-tools/it-tools-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`it-tools.mistyfumes.dev`)
      kind: Rule
      services:
        - name: it-tools
          port: 80
  tls:
    secretName: prod-mistyfumes-tls
